# backhand

./: .gitattributes  .gitignore  .rustfmt.toml  BENCHMARK.md  CHANGELOG.md  Cargo.toml  Cross.toml  DEVELOPMENT.md  README.md  RELEASE.md  bench.bash  create_test.bash  flake.nix  justfile  renovate.json  test-assets.toml  test_assets.toml
.cargo/: config  config.toml
.github/: codecov.yml  dependabot.yml  labeler.yml
.github/workflows/: benchmark.yml  binaries.yml  coverage.yml  labeler.yml  main.yml  msrv.yml  pull_request.yml
.github/workflows/cache/: action.yml
backhand/: Cargo.toml  release.toml
backhand-cli/: Cargo.toml  release.toml
backhand-cli/src/: lib.rs  parse.rs
backhand-test/: Cargo.toml  README.md
backhand-test/tests/: add.rs  issues.rs  large_files.rs  mutate.rs  non_standard.rs  raw.rs  remove.rs  replace.rs  seek.rs  test.rs  unsquashfs.rs  v3.rs
backhand-test/tests/common/: mod.rs
backhand/benches/: benchmark.rs
backhand/src/: compressor.rs  data.rs  dir.rs  entry.rs  error.rs  fragment.rs  id.rs  inode.rs  kinds.rs  lib.rs  lzma.rs  metadata.rs  os_traits.rs  reader.rs  squashfs.rs  unix_string.rs
backhand/src/filesystem/: mod.rs  node.rs  reader.rs  reader_no_parallel.rs  reader_parallel.rs  writer.rs
backhand/src/traits/: compression.rs  error.rs  filesystem.rs  mod.rs  squashfs.rs  types.rs
backhand/src/v3/: compressor.rs  data.rs  dir.rs  entry.rs  export.rs  fragment.rs  id.rs  inode.rs  metadata.rs  mod.rs  reader.rs  squashfs.rs  unix_string.rs
backhand/src/v3/filesystem/: mod.rs  node.rs  reader.rs  reader_no_parallel.rs  reader_parallel.rs  writer.rs
backhand/src/v3_lzma/: compressor.rs  mod.rs  standard_compressor.rs
backhand/src/v4/: compressor.rs  data.rs  dir.rs  entry.rs  export.rs  fragment.rs  id.rs  inode.rs  metadata.rs  mod.rs  reader.rs  squashfs.rs  unix_string.rs
backhand/src/v4/filesystem/: mod.rs  node.rs  reader.rs  reader_no_parallel.rs  reader_parallel.rs  writer.rs
backhand/src/v4_lzma/: compressor.rs  mod.rs
benches/: benchmark.rs
common/: common.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: bytes.rs  filesystem.rs  raw.rs  write_read_write.rs
lfs/test_00/: out.squashfs  squashfs-deku
lfs/test_01/: out.squashfs  squashfs-deku
lfs/test_02/: out.squashfs
lfs/test_03/: Cargo.toml  out.squashfs  squashfs-deku
lfs/test_04/: out.squashfs
lfs/test_04/testing/: 03
lfs/test_04/testing/what/: 04
lfs/test_04/testing/what/yikes/: 01  02
lfs/test_04/testing/woah/: 05
lfs/test_05/: out.squashfs
lfs/test_05/a/b/c/: d
lfs/test_06/: out.squashfs
lfs/test_07/: out.squashfs
lfs/test_08/: out.squashfs  squashfs-deku
lfs/test_09/: out  out.squashfs
src/: bufread.rs  compressor.rs  data.rs  dir.rs  entry.rs  error.rs  filesystem.rs  flags.rs  fragment.rs  id.rs  inode.rs  kinds.rs  lib.rs  main.rs  metadata.rs  reader.rs  reader_v4.rs  squashfs.rs  superblock.rs  tree.rs  writer.rs
src/filesystem/: dummy.rs  node.rs  reader.rs  writer.rs
src/v3/: data.rs  dir.rs  export.rs  filesystem.rs  fragment.rs  inode.rs  metadata.rs  mod.rs  reader.rs  squashfs.rs
src/v3/filesystem/: node.rs  reader.rs
src/v4/: data.rs  dir.rs  entry.rs  filesystem.rs  fragment.rs  inode.rs  metadata.rs  mod.rs  reader.rs  squashfs.rs
src/v4/filesystem/: node.rs  reader.rs  writer.rs
tests/: add.rs  bin.rs  issues.rs  mutate.rs  non_standard.rs  raw.rs  replace.rs  test.rs  unsquashfs.rs
tests/common/: mod.rs
