[package]
name = "backhand"
repository = "https://github.com/wcampbell0x2a/backhand"
version = "0.13.0"
edition = "2021"
rust-version = "1.66.0"
license = "MIT OR Apache-2.0"
authors = ["wcampbell <wcampbell1995@gmail.com>"]
description = "Library for the reading, creating, and modification of SquashFS file systems"
keywords = ["filesystem", "deku", "squashfs", "linux"]
categories = ["filesystem", "parsing"]

[dependencies]
# for lib
deku = { git = "https://github.com/sharksforarms/deku/", branch = "impl-reader-bit-order", features = ["logging"]}
tracing = "0.1.37"
thiserror = "1.0.37"
flate2 = { version = "1.0.24", optional = true }
xz2 = { version = "0.1.7", optional = true }
rust-lzo = { version = "0.6.2", optional = true }
zstd = { version = "0.12.3", optional = true }
rustc-hash = "1.1.0"

# for bins
nix = { version = "0.26.2", default-features = false, features = ["fs"] }
clap = { version = "4.2.0", features = ["derive", "wrap_help"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "fmt"] }
byte-unit = "4.0.18"
libc = "0.2.140"
clap_complete = "4.2.1"
indicatif = "0.17.5"
console = "0.15.7"
rayon = "1.7.0"
log = "0.4.19"
document-features = "0.2.7"

[features]
default = ["xz", "gzip", "zstd"]
## Enables xz compression inside library and binaries
xz = ["dep:xz2"]
## Enables xz compression and forces static build inside library and binaries
xz-static = ["dep:xz2", "xz2?/static"]
## Enables gzip compression inside library and binaries
gzip = ["dep:flate2"]
## This library is licensed GPL and thus disabled by default
lzo = ["dep:rust-lzo"]
## Enables zstd compression inside library and binaries
zstd = ["dep:zstd"]
### testing only feature for testing vs squashfs-tools/unsquashfs
__test_unsquashfs = []

[dev-dependencies]
env_logger = "0.9.1"
test-log = { version = "0.2.11", features = ["trace"] }
test-assets = { git  = "https://github.com/wcampbell0x2a/test-assets", branch = "replace-curl-ureq" }
assert_cmd = { version = "2.0.7", features = ["color", "color-auto"] }
dir-diff = { git  = "https://github.com/wcampbell0x2a/dir-diff", branch = "add-checking-permissions" }
tempfile = "3.0.0"
criterion = "0.3"
zune-inflate = "0.2.53"

[[bench]]
name = "benchmark"
harness = false

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies.jemallocator]
version = "0.5.0"

# Release(dist) binaries are setup for maximum runtime speed, at the cost of CI time
[profile.dist]
inherits = "release"
codegen-units = 1
lto = true
strip = true
