[workspace]
members = [
    "backhand-cli",
    "backhand",

    # Internal
    "backhand-test",
]
resolver = "2"

[workspace.package]
version = "0.17.0"
authors = ["wcampbell <wcampbell1995@gmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/wcampbell0x2a/backhand"
keywords = ["filesystem", "deku", "squashfs", "linux"]
categories = ["filesystem", "parsing"]

[profile.release]
overflow-checks = true

# Release(dist) binaries are setup for maximum runtime speed, at the cost of CI time
[profile.dist]
inherits = "release"
codegen-units = 1
lto = true
strip = true
overflow-checks = true
