[package]
name = "backhand-cli"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version = "1.77.0"
description = "Binaries for the reading, creating, and modification of SquashFS file systems"
readme = "../README.md"

[dependencies]
nix = { version = "0.29.0", default-features = false, features = ["fs"] }
clap = { version = "4.5.13", features = ["derive", "wrap_help"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
libc = "0.2.162"
clap_complete = "4.5.13"
indicatif = "0.17.9"
console = "0.15.8"
rayon = "1.10.0"
backhand = { path = "../backhand", default-features = false, version = "0.19.0" }
tracing = "0.1.40"
color-print = "0.3.6"
clap-cargo = "0.14.1"

[lib]
bench = false

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies.jemallocator]
version = "0.5.4"

# These features mirror the backhand features
[features]
default = ["xz", "gzip", "zstd"]
## Enables xz compression inside library and binaries
xz = ["backhand/xz"]
## Enables xz compression and forces static build inside library and binaries
xz-static = ["xz", "backhand/xz-static"]
## Enables gzip compression inside library and binaries
any-gzip = []
gzip = ["any-gzip", "backhand/gzip"]
gzip-zlib-rs = ["any-gzip", "backhand/gzip-zlib-rs"]
## Enables faster gzip de-compression only inside library and binaries
gzip-zune-inflate = ["any-gzip", "backhand/gzip-zune-inflate"]
## This library is licensed GPL and thus disabled by default
lzo = ["backhand/lzo"]
## Enables zstd compression inside library and binaries
zstd = ["backhand/zstd"]

[[bin]]
name = "unsquashfs-backhand"
path = "src/bin/unsquashfs.rs"
bench = false

[[bin]]
name = "add-backhand"
path = "src/bin/add.rs"
bench = false

[[bin]]
name = "replace-backhand"
path = "src/bin/replace.rs"
bench = false
