[package]
name = "tests"
version = "0.0.0"
edition = "2021"
publish = false

[dev-dependencies]
backhand = { path = "../backhand", default-features = false }
assert_cmd = { version = "2.0.14", features = ["color", "color-auto"] }
dir-diff = { git  = "https://github.com/wcampbell0x2a/dir-diff", branch = "add-checking-permissions" }
tempfile = "3.10.1"
test-assets = { git  = "https://github.com/wcampbell0x2a/test-assets", branch = "replace-curl-ureq" }
test-log = { version = "0.2.15", features = ["trace"] }
tracing = "0.1.40"
libdeflater = "1.19.2"
env_logger = "0.10.2"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
nix = { version = "0.28.0", default-features = false, features = ["fs"] }

[lib]
bench = false

[features]
# testing only feature for testing vs squashfs-tools/unsquashfs
__test_unsquashfs = []
default = ["xz", "gzip", "zstd"]
xz = ["backhand/xz"]
xz-static = ["backhand/xz-static"]
gzip = ["backhand/gzip"]
gzip-zune-inflate = ["backhand/gzip-zune-inflate"]
# this library is licensed GPL and thus disabled by default
lzo = ["backhand/lzo"]
zstd = ["backhand/zstd"]

[[test]]
name = "add"

[[test]]
name = "issues"

[[test]]
name = "mutate"

[[test]]
name = "non_standard"

[[test]]
name = "raw"

[[test]]
name = "replace"

[[test]]
name = "unsquashfs"
