[package]
name = "tests"
version = "0.0.0"
edition = "2021"
publish = false

[dev-dependencies]
backhand = { path = "../backhand", default-features = false }
assert_cmd = { version = "2.0.16", features = ["color", "color-auto"] }
dir-diff = { git  = "https://github.com/wcampbell0x2a/dir-diff", branch = "add-checking-permissions" }
tempfile = "3.14.0"
test-assets-ureq = { git = "https://github.com/wcampbell0x2a/test-assets-ureq", branch = "add-assets-from-file" }
test-log = { version = "0.2.16", features = ["trace"] }
tracing = "0.1.40"
libdeflater = "1.22.0"
env_logger = "0.11.5"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
nix = { version = "0.29.0", default-features = false, features = ["fs"] }
backon = "1.2.0"

[lib]
bench = false

[features]
# testing only feature for testing vs squashfs-tools/unsquashfs
__test_unsquashfs = []
default = ["xz", "gzip", "zstd"]
xz = ["backhand/xz"]
xz-static = ["backhand/xz-static"]
any-gzip = []
gzip = ["any-gzip", "backhand/gzip"]
gzip-zlib-ng = ["any-gzip", "backhand/gzip-zlib-ng"]
# this library is licensed GPL and thus disabled by default
lzo = ["backhand/lzo"]
zstd = ["backhand/zstd"]

[[test]]
name = "add"

[[test]]
name = "issues"

[[test]]
name = "mutate"

[[test]]
name = "non_standard"

[[test]]
name = "raw"

[[test]]
name = "replace"

[[test]]
name = "unsquashfs"

[dependencies]
toml = "0.8.19"
