[package]
name = "backhand"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version = "1.75"
description = "Library for the reading, creating, and modification of SquashFS file systems"
readme = "../README.md"

[package.metadata.docs.rs]
features = ["xz", "gzip", "zstd", "document-features"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
deku = { version = "0.18.1", default-features = false, features = ["std"] }
tracing = { version = "0.1.40" }
thiserror = "2.0.1"
flate2 = { version = "1.0.34", optional = true }
zune-inflate = { version = "0.2.54", optional = true, default-features = false, features = ["zlib"] }
xz2 = { version = "0.1.7", optional = true }
rust-lzo = { version = "0.6.2", optional = true }
zstd = { version = "0.13.2", optional = true }
zstd-safe = { version = "7.2.1", optional = true }
document-features = { version = "0.2.10", optional = true }
xxhash-rust = { version = "0.8.12", features = ["xxh64"] }
solana-nohash-hasher = "0.2.1"
# Use the fastest implementation (libz-ng) for flate2 but remove dependence on CMake
libz-sys = { version = "1.1.20", features = ["zlib-ng-no-cmake-experimental-community-maintained"], default-features = false }
# Temporary workaround for https://github.com/rust-lang/libz-sys/issues/225
libz-ng-sys = { version = "<1.1.22", optional = true }

[features]
default = ["xz", "gzip", "zstd"]
## Enables xz compression inside library and binaries
xz = ["dep:xz2"]
## Enables xz compression and forces static build inside library and binaries
xz-static = ["dep:xz2", "xz2?/static"]
## Enables gzip compression inside library and binaries using flate2 library with zlib-rs
gzip = ["any-flate2", "any-gzip", "dep:flate2", "flate2?/zlib-rs"]
## Enables gzip compression inside library and binaries using flate2 library with zlib-ng
gzip-zlib-ng = ["any-flate2", "any-gzip", "dep:flate2", "flate2?/zlib-ng"]
## This library is licensed GPL and thus disabled by default
lzo = ["dep:rust-lzo"]
## Enables zstd compression inside library and binaries
zstd = ["dep:zstd", "dep:zstd-safe"]
## Internal only
any-gzip = []
## Internal only
any-flate2 = []

[dev-dependencies]
test-log = { version = "0.2.16", features = ["trace"] }
test-assets-ureq = "0.5.0"
assert_cmd = { version = "2.0.16", features = ["color", "color-auto"] }
dir-diff = { git  = "https://github.com/wcampbell0x2a/dir-diff", branch = "add-checking-permissions" }
tempfile = "3.14.0"
criterion = "0.5"
libdeflater = "1.22.0"

[[bench]]
name = "benchmark"
harness = false

[lib]
bench = false
