[package]
name = "backhand"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version = "1.84"
description = "Library for the reading, creating, and modification of SquashFS file systems"
readme = "../README.md"

[package.metadata.docs.rs]
features = ["xz", "gzip", "zstd", "document-features"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
deku = { version = "0.20.0", default-features = false, features = ["std", "bits", "descriptive-errors"] }
tracing = { version = "0.1.40" }
thiserror = "2.0.1"
flate2 = { version = "1.1.0", optional = true, default-features = false, features = ["zlib-rs"] }
liblzma = { version = "0.4.1", optional = true, default-features = false, features = ["static", "parallel"] }
liblzma-sys = { version = "0.4.3", optional = true }
lzma-adaptive-sys = { version = "0.1.0", optional = true }
rust-lzo = { version = "0.6.2", optional = true }
zstd = { version = "0.13.2", optional = true }
zstd-safe = { version = "7.2.1", optional = true }
document-features = { version = "0.2.10", optional = true }
xxhash-rust = { version = "0.8.12", features = ["xxh64"] }
solana-nohash-hasher = "0.2.1"
lz4_flex = { version = "0.11.3", optional = true, default-features = false }
rayon = { version = "1.10.0", optional = true, default-features = false }

[features]
default = ["xz", "gzip", "zstd", "lz4", "parallel", "v3", "v3_lzma"]
## Enables squashfs v3
v3 = ["gzip"]
## Enables squashfs v3 with LZMA compression
v3_lzma = ["v3", "dep:lzma-adaptive-sys", "dep:liblzma"]
## Enables xz compression inside library and binaries
xz = ["dep:liblzma"]
## Enables xz compression and forces static build inside library and binaries
xz-static = ["dep:liblzma", "liblzma?/static"]
## Enables gzip compression inside library and binaries using flate2 library with zlib-rs
gzip = ["any-flate2", "any-gzip", "dep:flate2"]
## This library is licensed GPL and thus disabled by default
lzo = ["dep:rust-lzo"]
## Enables zstd compression inside library and binaries
zstd = ["dep:zstd", "dep:zstd-safe"]
## Enables Lz4 compression
lz4 = ["dep:lz4_flex"]
## Internal only
any-gzip = []
## Internal only
any-flate2 = []
## Enable parallel decompression
parallel = ["dep:rayon"]

[dev-dependencies]
test-log = { version = "0.2.16", features = ["trace"] }
test-assets-ureq = "0.3.0"
assert_cmd = { version = "2.0.16", features = ["color", "color-auto"] }
dir-diff = { git  = "https://github.com/wcampbell0x2a/dir-diff", branch = "add-checking-permissions" }
tempfile = "3.14.0"
criterion = "0.6"
libdeflater = "1.22.0"

[[bench]]
name = "benchmark"
harness = false

[lib]
bench = false
