[package]
name = "backhand-fuzz"
version = "0.0.0"
publish = false
edition = "2024"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = { version = "0.15.0", package = "libafl_libfuzzer" }

[dependencies.backhand]
path = "../backhand"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[profile.release]
debug = 1

[[bin]]
name = "bytes"
path = "fuzz_targets/bytes.rs"
test = false
doc = false

[[bin]]
name = "filesystem"
path = "fuzz_targets/filesystem.rs"
test = false
doc = false

[[bin]]
name = "raw"
path = "fuzz_targets/raw.rs"
test = false
doc = false

[features]
xz-static = ["backhand/xz-static"]
